h/static/styles/annotations.scss
//ANNOTATION////////////////////////////////
//This is for everything that is formatted as an annotation.
.annotation {
  font-family: $sans-font-family;
  font-weight: 300;
  position: relative;

  &:hover .annotation-timestamp, &:hover .reply-count {
    color: $link-color;
  }

  .annotation-timestamp {
    line-height: 2;
    color: $text-color;
    &:hover { color: $link-color-hover; }
    &:focus { outline: 0; }
  }

  .annotation-header { margin-bottom: .8em }
  .annotation-section { margin: .8em 0 }
  .annotation-footer { margin-top: .8em }

  .annotation-user {
    color: $text-color;
    font-weight: bold;
    font-size: 1.1em;
    &:hover {
      color: $link-color-hover;
      cursor: pointer;
      text-decoration: underline;
    }
  }
}

.annotation-quote {
  @include quote;
}

.annotation-citation-domain {
  color: $gray-light;
  font-size: .923em;
}

.icon-markdown {
  color: $text-color;
  line-height: 1.4;
  margin-left: .5em;
}

.magicontrol {
  margin-right: .8em;
  color: $gray-lighter;

  &.dropdown {
    top: 4px;
  }

  .annotation:hover & {
    color: $link-color;
  }
}

.share-dialog {
  a {
    float: left;
    line-height: 1.4;
    margin-right: .5em;
    vertical-align: middle;
  }

  div {
    overflow: hidden;
  }

  input {
    padding: 0;
    width: 100%;
  }
}

